# driveDeduplicator

./: .gitignore  README.md  README.rst
include/: driveDeduplicator.h  fileModel.h  file_copier.h  file_hasher.h  hash_coordinator.h  hash_db.h  logger.h
src/: CMakeLists.txt  driveDeduplicator.cpp  fileModel.cpp  file_copier.cpp  file_hasher.cpp  hash_coordinator.cpp  hash_db.cpp  logger.cpp  main.cpp
