CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (DriveDeduplicator)
ENABLE_LANGUAGE(CXX)


SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
FIND_PACKAGE( Qt4 REQUIRED QtCore QtGui QtSql)
INCLUDE(${QT_USE_FILE})

SET (THE_INCLUDE_DIR ../include)
SET (PROGRAM_EXE driveDeduplicator)

FILE(GLOB header_files ${THE_INCLUDE_DIR}/*.h)
FILE(GLOB source_files *.cpp)

SET (SOURCES ${source_files} ${header_files})

INCLUDE_DIRECTORIES(${THE_INCLUDE_DIR})

ADD_EXECUTABLE(${PROGRAM_EXE} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROGRAM_EXE} ${QT_LIBRARIES})
